tests/errors/errors/test5.c
void f()
{
    return 3;
}
void main()
{
    int a = f();
}
